--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,4 +1,6 @@
-
+<div [hidden]="!loading" class="loader-container">
+  <mat-spinner color="warn"></mat-spinner>
+</div>
   <div>
     <div class="d-flex justify-content-between align-items-center mb-3">
       <input
