--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,7 +1,7 @@
 <div [hidden]="!loading" class="loader-container">
   <mat-spinner color="warn"></mat-spinner>
 </div>
-  <div>
+  <div [hidden]="loading">
     <div class="d-flex justify-content-between align-items-center mb-3">
       <input
         type="text"
@@ -21,7 +21,7 @@
     </div>
 
     <div class="table-responsive">
-      <table mat-table [dataSource]="dataSource" matSort class="table table-hover" [hidden]="loading">
+      <table mat-table [dataSource]="dataSource" matSort class="table table-hover" >
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
           <td mat-cell *matCellDef="let employee">{{ employee.id }}</td>
